--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Seatyourself</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>Seatyourself</title>
+    <%= csrf_meta_tags %>
 
-<%= yield %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </head>
 
-<p class="userinfo">
-  <% if current_user %>
-    Signed in as <%= current_user.email %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
-  <% else %>
-    <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
-  <% end %>
-</p>
+  <body>
 
-</body>
+    <p><%= link_to 'Home', root_path %></p>
+
+    <% if current_user %>
+      <p>
+        Hello <%= current_user.email %>!
+        |
+        <%= link_to 'Logout', sessions_path, method: :delete %>
+      </p>
+    <% else %>
+      <p>
+        <%= link_to 'New User', new_user_path %>
+        |
+        <%= link_to 'Login', new_sessions_path %>
+      </p>
+    <% end %>
+
+    <% if flash.any? %>
+      <% flash.each do |key, value| %>
+        <p class="<%= key %>">
+          <%= value %>
+        </p>
+      <% end %>
+    <% end %>
+
+    <%= yield %>
+  </body>
 </html>
