--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       </p>
     <% else %>
       <p>
-        <%= link_to 'New User', new_user_path %>
+        <%= link_to 'Create Account', new_user_path %>
         |
         <%= link_to 'Login', new_sessions_path %>
       </p>
