--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -10,3 +10,5 @@
             <li> <%= @restaurant.menu %> </li>
 
             </ul>
+
+<p> <%= link_to('Make a Reservation', new_reservation_path) %> </p>
