restaurant.reservation id

--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Make Reservation</h1>
 
-<%= form_for @reservation do |f| %>
+<%= form_for ([@restaurant, @reservation]) do |f| %>
 <div class="field">
   <%= f.label :time %>
   <%= f.time_field  :time %>
