--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -4,5 +4,7 @@
 <% @reservations.each do |r| %>
 <li> <%= r.time %> </li>
   <li> <%= r.party_size %> </li>
+  <li>  <%=   r.restaurant_id %> </li>
+
 </ul>
 <!-- <li> <img src= '<%= @restaurant.photo_url%>'> </li> -->
