--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -11,4 +11,4 @@
 
             </ul>
 
-<p> <%= link_to('Make a Reservation', new_reservation_path) %> </p>
+<p> <%= link_to('Make a Reservation', new_restaurant_reservation_path(@restaurant.id)) %> </p>
