--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,6 +10,17 @@
 
 <%= form_for @user do |f| %>
 
+<div class='field'>
+  <%= f.label :full_name %>
+  <%= f.text_field :full_name %>
+</div>
+
+
+<div class='field'>
+  <%= f.label :phone_number %>
+  <%= f.telephone_field :phone_number %>
+</div>
+
   <div class='field'>
     <%= f.label :email %>
     <%= f.email_field :email %>
@@ -24,6 +35,12 @@
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
   </div>
+
+  <%= f.radio_button :role, "Owner" %>
+  <%= f.label :role, "Owner", :value => "Owner" %>
+
+  <%= f.radio_button :role, "Cutomer" %>
+  <%= f.label :role, "Customer", :value => "Customer" %>
 
   <%= f.submit 'Sign Up' %>
 
